--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="./dist/output.css" />
   </head>
   <body>
+    <section class="flex flex-wrap gap-6 p-4">
+      <div class="flex-1 sm:w-1/2 md:w-2/3 lg:w-2/3 xl:w-2/3 p-4">
+        <h1 class="text-3xl font-bold mb-3">All Products</h1>
+        <div id="allproducts" class="flex flex-wrap gap-4"></div>
+      </div>
+      <div
+        class="sm:w-1/2 md:w-1/3 lg:w-1/3 xl:w-1/3 p-4 bg-slate-100 rounded-md shadow-sm"
+      >
+        <h1 class="text-2xl font-bold">Cart</h1>
+      </div>
+    </section>
+
     <script src="./app.js"></script>
   </body>
 </html>
